# ESP32_TFT_library

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions_example.csv
components/: mqt.conf
components/spiffs_image/: storage.img
components/tft/: CMakeLists.txt  Kconfig  tft.c  tft.h  tftspi.c  tftspi.h
main/: CMakeLists.txt  Kconfig.projbuild  helpers.c  helpers.h  mqtt_handler.c  mqtt_handler.h  tft_demo.c  wifi_setup.c  wifi_setup.h
